Fix the alignment(unit) of whole layout after adding footer

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body {
     height: 100%;
     padding: 1rem;
     display: grid;
-    grid-template: [header-top] "logo nav nav" 1fr [header-bottom intro-top] "intro intro intro" 4fr [intro-bottom content-top]"side-left content side-right" 4fr[content-bottom footer-top] "footer footer footer" 1fr [footer-bottom] / 2fr 2.5fr 2fr;
+    grid-template: [header-top] "logo nav nav" 20% [header-bottom intro-top] "intro intro intro" 30% [intro-bottom content-top]"side-left content side-right" 30% [content-bottom footer-top] "footer footer footer" 20%[footer-bottom] / 2fr 2.5fr 2fr;
     grid-gap: 10px;
 }
 
@@ -95,7 +95,6 @@ body {
 
 .logo img {
     width: 100%;
-    height: 100%;
 }
 
 /* Header >> nav */
@@ -204,7 +203,7 @@ nav ul a {
 
 .side-left__aside{
     display: grid;
-    grid-template-rows: repeat(auto-fill, minmax(max-content, auto));
+    grid-template-rows: repeat(auto-fill, minmax(max-content, 1fr));
 }
 
 .side-left__aside div{
@@ -254,12 +253,11 @@ nav ul a {
 
 .side-right{
     display: grid;
-    grid-template-rows: 0.3fr 4fr;
+    grid-template-rows: auto 4fr;
 }
 
 .side-right__aside ul{
     display: grid;
-    height: 70%;
     /*grid-template-rows: repeat(auto-fill, minmax(max-content, auto));*/
     grid-template-rows: repeat(5, minmax(max-content, 1fr));
 }
